--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express-mesto-gha",
   "version": "1.0.0",
-  "author": "Nikolay Vasilyev",
+  "author": "Nikolay_Vasilyev",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
@@ -9,9 +9,14 @@
     "mongoose": "^6.9.2"
   },
   "devDependencies": {
+    "eslint": "^8.34.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
     "nodemon": "^2.0.20"
   },
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "lint": "npx eslint ."
   }
 }
