--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
   "name": "express-mesto-gha",
   "version": "1.0.0",
-  "author": "Nikolay_Vasilyev",
-  "main": "index.js",
+  "author": "Nikolay Vasilyev",
+  "main": "app.js",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SeverInvest/express-mesto-gha"
+  },
   "dependencies": {
+    "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "mongoose": "^6.9.2"
   },
   "devDependencies": {
     "eslint": "^8.34.0",
-    "eslint-plugin-react": "^7.32.2",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-react": "^7.32.2",
     "nodemon": "^2.0.20"
   },
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "lint": "npx eslint ."
   }
 }
