--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,5 @@
 {
   "env": {
-    "browser": true,
     "es2021": true
   },
   "extends": [
@@ -23,7 +22,6 @@
     }
   },
   "rules": {
-    "no-underscore-dangle": ["error", { "allow": ["_id"] }],
-    "no-console": 0
+    "no-underscore-dangle": ["error", { "allow": ["_id"] }]
   }
 }
